reports/Solución numérica sistema masa resorte amortiguador.err.log
Traceback (most recent call last):
  File "C:\Users\lcisn\AppData\Local\Programs\Python\Python38\lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Users\lcisn\AppData\Local\Programs\Python\Python38\lib\site-packages\nbclient\client.py", line 1263, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\lcisn\AppData\Local\Programs\Python\Python38\lib\site-packages\nbclient\util.py", line 85, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\lcisn\AppData\Local\Programs\Python\Python38\lib\site-packages\nbclient\util.py", line 60, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\lcisn\AppData\Local\Programs\Python\Python38\lib\asyncio\base_events.py", line 616, in run_until_complete
    return future.result()
  File "C:\Users\lcisn\AppData\Local\Programs\Python\Python38\lib\site-packages\nbclient\client.py", line 701, in async_execute
    await self.async_execute_cell(
  File "C:\Users\lcisn\AppData\Local\Programs\Python\Python38\lib\site-packages\nbclient\client.py", line 1019, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\lcisn\AppData\Local\Programs\Python\Python38\lib\site-packages\nbclient\client.py", line 913, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
Método de Runge-Kutta de segundo orden¶
El método de Runge-Kutta para resolver la ecuación diferencial de segundo orden {eq}`MBKeq1`

```{math}
:label: RKMBKeq4
\begin{eqnarray}
	x_{1_{i+1}}&=x_{1_{i+1}}+h\left( \frac{1}{2}k_{11}+\frac{1}{2}k_{12} \right)\\
    x_{2_{i+1}}&=x_{2_{i}}+h\left(\frac{1}{2}k_{21}+\frac{1}{2}k_{22} \right)
	\end{eqnarray}
```
con:

```{math}
:label: RKMBKeq5
\begin{eqnarray}
	&k_{12}=-\frac{b}{m}x_{2_{i}}-\frac{k}{m}x_{1_{i}}\\
    &k_{11}=x_{2_{i}}\\
    k_{22}&=-\frac{b}{m}(x_{2_{i}}+hk_{11})-\frac{k}{m}(x_{1_{i}}+hk_{12})\\
    &k_{21}=x_{2_{i}}+hk_{11})
	\end{eqnarray}
```

El código siguiente, escrito en pyhton permite resolver de forma iterativa el conjunto de ecuaciones de primer orden de la representación en el espacio de estados del modelo matemático del circuito RLC serie. El paso de integación se define como  ℎ
 .
------------------

[1;36m  Cell [1;32mIn[2], line 1[1;36m[0m
[1;33m    Método de Runge-Kutta de segundo orden¶[0m
[1;37m           ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (601836132.py, line 1)

